kubernetes/rag-v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-v1
  namespace: default
spec:
  replicas: 0
  selector:
    matchLabels:
      app: rag
      version: v1
  template:
    metadata:
      labels:
        app: rag
        version: v1
    spec:
      containers:
      - env:
        - name: OLLAMA_BASE_URL
          value: http://host.docker.internal:11434
        image: linsun/rag:v1
        imagePullPolicy: Always
        name: rag
        ports:
        - containerPort: 8000
          protocol: TCP
        resources:
          limits:
            cpu: "2"
            memory: 4Gi
          requests:
            cpu: "1"
            memory: 2Gi
      serviceAccountName: rag
