kubernetes/client.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  labels:
    app: client
    service: client
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName: client
      containers:
      - name: client
        image: linsun/curl:latest
        command: ["/bin/sleep", "infinity"]
        imagePullPolicy: IfNotPresent
---
