kubernetes/ingress-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  # name: istio-ingress
  # namespace: istio-system
  name: agentgateway
  namespace: default
spec:
  # gatewayClassName: istio
  gatewayClassName: agentgateway
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
